# Conversational-AI

./: .env  .gitignore  README.md  hello.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_action.yml
UserInterface/: stream.py
src/llm_utils/: llm_engine.py
src/llm_utils/WebsocketManager/: SocketConnection.py
