[project]
name = "conversational-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "groq>=0.18.0",
    "langchain-community>=0.3.17",
    "langchain>=0.3.19",
    "langchain-groq>=0.2.4",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "streamlit>=1.42.1",
    "fastapi>=0.115.8",
]
